--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,4 +1,5 @@
-remote_theme: just-the-docs/just-the-docs
+theme: just-the-docs # for local development
+remote_theme: just-the-docs/just-the-docs # for github pages
 title: Dev Notes
 description: Technical notes and tutorials
 
@@ -6,3 +7,7 @@ description: Technical notes and tutorials
 color_scheme: dark
 search_enabled: true
 footer_content: "Made by <a href='https://github.com/gatisr'>@gatisr</a>"
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%d.%m.%Y %H:%M"  # 12.02.2026 10:19
