--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,5 +1,4 @@
-theme: just-the-docs # for local development
-remote_theme: just-the-docs/just-the-docs # for github pages
+remote_theme: just-the-docs/just-the-docs
 title: Dev Notes
 description: Technical notes and tutorials
 
