--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -9,4 +9,4 @@ footer_content: "Made by <a href='https://github.com/gatisr'>@gatisr</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
-last_edit_time_format: "%d.%m.%Y %H:%M"  # 12.02.2026 10:19
+last_edit_time_format: "%H:%M %d.%m.%Y"  # 10:19 12.02.2026
